src/main/resources/static/css/main.css
/*Main Styles*/
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    scroll-behavior: smooth;
    font-family: 'Segoe UI', Tahoma, Geneva, Verdana,
    sans-serif;
}

a {
    text-decoration: none;
    color: inherit;
}

body {
    min-height: 100vh;
    display: flex;
    flex-direction: column;
}

.underlined-link{
    text-decoration: underline;
    color: lightskyblue;
}

#main-container {
    /* does flex setting for IE */
    -ms-flex: 1 1 auto;
    flex: 1;
    background-color: #333333;
    color: #c0c0c0;
}

#margin-container {
    margin: 20px 50px;
    justify-content: center;
    display: flex;
    flex-direction: column;
}

#page-title{
    display: flex;
    align-items: center;
    margin: auto;
}

#page-title h1 {
    text-align: center;
    color: #ffffff;
}

.sub-title {
    text-align: center;
    margin: 10px auto;
}

button {
    height: 30px;
    min-width: 80px;
    border: none;
    border-radius: 5px;
    box-shadow: none;
    cursor: pointer;
    display: flex;
    align-items: center;
    justify-content: center;
    font-size: 0.8em;
}

input,
[type='text'],
[type='password'],
[type='date'],
[type='datetime'],
[type='datetime-local'],
[type='month'],
[type='week'],
[type='email'],
[type='number'],
[type='search'],
[type='tel'],
[type='time'],
[type='url'],
[type='color'],
textarea,
select {
    width: 100%;
    height: 30px;
    margin: 0 0 20px;
    padding: 10px 10px;
    border: 1px solid #333333;
    border-radius: 5px;
    color: inherit;
    transition: border-color 0.25s ease-in-out;
    box-shadow: 1px 1px 1px #000000;
    font-size: 0.8em;
}

.error-text{
    text-align: center;
    margin: 5px auto;
    color: #d53a53;
    font-size: 0.9em;
}

/*Header Styles*/
#nav-container {
    width: 100%;
    min-height: 80px;
    display: flex;
    align-items: center;
    justify-content: center;
    background-color: #5125ad;
}

#main-nav {
    display: flex;
    width: 100%;
    align-items: center;
    padding: 0 30px;
    justify-content: space-between;
}

.nav-flex{
    display: flex;
    align-items: center;
    justify-content: space-between;
}

#nav-title{
    margin: 5px 20px 0 0;
    display: inline-block;
}

#nav-title h1 {
    color: #ffffff;
    font-size: 24px;
    letter-spacing: 4px;
}

.nav-links{
    display: flex;
    list-style: none;
    text-align: center;
    justify-content: flex-end;
    margin-bottom: 0;
}

.nav-link{
    list-style: none;
    font-size: 14px;
    color: #ffffff;
    margin: 8px;
    letter-spacing: 2px;
}
/*Footer Style*/
#main-footer-container {
    display: flex;
    width: 100%;
    background-color: #5125ad;
    align-items: center;
    height: 60px;
    border-top: 2px #c0c0c0;
}

#footer-text {
    color: #ffffff;
    width: 100%;
    font-size: 18px;
    margin: 0 25%;
}

#footer-text p {
    display: flex;
    justify-content: center;
    font-size: 0.9rem;
    letter-spacing: 2px;
}

.copyright {
    color: whitesmoke;
    margin: 0 10px;
}

/*ViewMyDetails Style*/
#details-container{
    display: flex;
    flex-direction: column;
    align-items: center;
    margin-top: 20px;
}

/*Categories CSS*/
#all-categories-container{
    margin: 20px auto;
    display: flex;
    justify-content: center;
    flex-direction: column;
}

#categories-table td {
    padding: 5px;
    font-size: 0.8em;
}

#category-form-container{
    margin-top: 20px;
    display: flex;
    justify-content: center;
    flex-direction: column;
}

#category-form{
    display: flex;
    flex-direction: column;
    align-items: center;
}
.add-category-content{
    margin: 5px;
}

/*Skills CSS*/
#all-skills-container{
    margin: 20px auto;
    display: flex;
    justify-content: center;
}

#skills-table{
    padding: 5px;
}

/*View Skills By Category Styles*/
#skill-table-by-category{
    margin: 20px auto;
    text-align: center;
}

